Stress test setup & newrelic

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "compression": "^1.7.4",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "newrelic": "^7.1.1"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
